--- a/index.css
+++ b/index.css
@@ -1,10 +1,12 @@
+/* CSS reset */
+
 html {
     font-size: 62.5%;
 }
 
 body {
-    font-family: ;
-    font-size: 1.6 rem;
+    font-family: 'Roboto Mono', monospace;
+    font-size: 2rem;
 }
 
 section {
