--- a/index.css
+++ b/index.css
@@ -6,9 +6,25 @@ html {
 
 body {
     font-family: 'Roboto Mono', monospace;
-    font-size: 2rem;
+    font-size: 1.6rem;
+    max-width: 100%;
+}
+/* tab blocks at the top */
+
+nav {
+    border: 2px solid black; 
+    padding: 0 10%; 
 }
 
-section {
-    padding: 4% 0;
+/* tab blocks */
+nav  .tab {
+    color: red; 
+    display: inline-block; 
+    text-align: center; 
+    border-radius: 30px; 
+    border: 1px solid red; 
+    width: 30%; 
+    box-sizing: border-box; 
+    padding: 0 10%; 
 }
+
