--- a/index.css
+++ b/index.css
@@ -9,22 +9,41 @@ body {
     font-size: 1.6rem;
     max-width: 100%;
 }
-/* tab blocks at the top */
-
-nav {
-    border: 2px solid black; 
-    padding: 0 10%; 
-}
-
 /* tab blocks */
-nav  .tab {
-    color: red; 
+.tab {
     display: inline-block; 
     text-align: center; 
     border-radius: 30px; 
-    border: 1px solid red; 
-    width: 30%; 
+    width: 30%;     
     box-sizing: border-box; 
-    padding: 0 10%; 
 }
+
+.plan {
+    background-color: #FF764E;
+    color: white; 
+}
+
+.learn {
+    background-color: #5ED3EB;
+    color: white; 
+}
+
+.get {
+    background-color: #FFCD69;
+    color: white; 
+}
+/* tab blocks on top */
+
+nav {
+    border: 1px red solid; 
+    box-sizing: border-box; 
+    padding: 0 auto; 
+}
+/* header */
+
+header {
+    display: inline-block; 
+    width: 40%; 
+}
+
 
