--- a/index.css
+++ b/index.css
@@ -1,5 +1,3 @@
-/* CSS reset */
-
 html {
     font-size: 62.5%;
 }
@@ -9,6 +7,9 @@ body {
     font-size: 1.6rem;
     max-width: 100%;
 }
+
+/* CSS reset */
+
 /* tab blocks */
 .tab {
     display: inline-block; 
@@ -68,4 +69,36 @@ header #yosemite-title {
 .main-text {
     background: #DDB9A3;
     color: white; 
+    margin: 0 auto; 
+}
+
+#campfire {
+    width: 10%; 
+}
+
+/* info-blocks with icons */
+.info-block-fire {
+    border: 1px red solid;
+    text-align: center; 
+    padding: 0 40%;  
+}
+
+#trailer {
+    width: 10%; 
+}
+.info-block-trailer {
+    border: 1px red solid;
+    text-align: center; 
+    padding: 0 40%;  
+}
+
+/* footer */
+
+footer {
+  background-color: #F9E7DC; 
+  display: inline-block; 
+}
+
+#tunnel-view {
+    max-width: 100%;
 }
